--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-  <title>Colors</title>
+  <title>Color</title>
 
   <!-- Grab some style from https://getbootstrap.com/docs/4.3/getting-started/introduction/ -->
 
