--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         </fieldset>
 
         <fieldset>
-          <label id = "red label" for="green">Green</label>
+          <label id = "green label" for="green">Green</label>
           <input id="green" type="range" min="0" max="255" value="255">
         </fieldset>
 
         <fieldset>
-          <label id = "red label" for="blue">Blue</label>
+          <label id = "blue label" for="blue">Blue</label>
           <input id="blue" type="range" min="0" max="255" value="100">
         </fieldset>
 
