--- a/index.html
+++ b/index.html
@@ -24,22 +24,24 @@
 
       <section class="col-sm-4">
         <h1>Change Color</h1>
+
+        <h4>Sri Sudheera Chitipolu</h4>
       </section>
 
       <section class="col-sm-4">
 
         <fieldset>
-          <label id = "red-label" for="red">Red</label>
+          <label id="red-label" for="red">Red</label>
           <input id="red" type="range" min="0" max="255" value="100">
         </fieldset>
 
         <fieldset>
-          <label id = "green-label" for="green">Green</label>
+          <label id="green-label" for="green">Green</label>
           <input id="green" type="range" min="0" max="255" value="255">
         </fieldset>
 
         <fieldset>
-          <label id = "blue-label" for="blue">Blue</label>
+          <label id="blue-label" for="blue">Blue</label>
           <input id="blue" type="range" min="0" max="255" value="100">
         </fieldset>
 
@@ -54,9 +56,9 @@
   </main>
 
   <footer class="container mt-3 text-center ">
-    <a href="https://profcase.github.io/js-colors/">Demo</a>
+    <a href="https://profcase.github.io/js-colors/"><button id="mybtn">Demo</button></a>
     &#9670;
-    <a href="https://github.com/profcase/js-colors">Source</a>
+    <a href="https://github.com/profcase/js-colors"><button id="mybtn1">Source</button></a>
   </footer>
 
   <script src="main.js"></script>
